--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
   "name": "shedrack-apology",
   "version": "1.0.0",
-  "description": "Apology API for Shedrack Tabansi - /apology endpoint",
   "main": "index.js",
+  
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Shedrack Tabansi",
+  "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^5.1.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
-  },
-  "engines": {
-    "node": "18.x"
+    "nodemon": "^3.1.10"
   }
 }
